--- a/_layouts/style.css
+++ b/_layouts/style.css
@@ -2,5 +2,5 @@
 ---
 
 body {
-  background: radial-gradient(circle farthest-side, #fae3e3, #b7b7b7);
+  background-color: radial-gradient(circle farthest-side, #fae3e3, #b7b7b7);
 }
